@@ -355,9 +355,11 @@ main (int argc, char **argv)
 	}
 
 	/* Commandline parsing is done here */
-	context = g_option_context_new (_(" GNOME Help Browser"));
+	context = g_option_context_new (N_(" GNOME Help Browser"));
 
 	g_option_context_add_main_entries (context, options, GETTEXT_PACKAGE);
+
+	g_option_context_set_translation_domain(context, GETTEXT_PACKAGE);
 
 	gtk_window_set_auto_startup_notification(FALSE);
 
