@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Help
 _Comment=Get help with GNOME
 Exec=yelp
-Icon=gnome-help.png
+Icon=gnome-help
 StartupNotify=true
 Terminal=false
 Type=Application
